--- a/Iso.Backend.Infrastructure/Iso.Backend.Infrastructure.csproj
+++ b/Iso.Backend.Infrastructure/Iso.Backend.Infrastructure.csproj
@@ -11,4 +11,9 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+      <Folder Include="Persistence\" />
+    </ItemGroup>
+
 </Project>
