--- a/Iso.Backend.Infrastructure/Iso.Backend.Infrastructure.csproj
+++ b/Iso.Backend.Infrastructure/Iso.Backend.Infrastructure.csproj
@@ -8,12 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+      <Folder Include="Migrations\" />
+      <Folder Include="Persistence\" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Migrations\" />
-      <Folder Include="Persistence\" />
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Iso.Backend.Domain\Iso.Backend.Domain.csproj" />
     </ItemGroup>
 
 </Project>
