--- a/Iso.Backend.Web/appsettings.json
+++ b/Iso.Backend.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SQLConnection": "Server=diso_dbpg-co5f7v4f7o1s73a11g60-a.oregon-postgres.render.com;Port=5432;Database=iso_db;User Id=iso_db_user;Password=EUNv6OM6zm6ZR42XmYrfH8ioa234MScs;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
