Add Order layers and items

--- a/Iso.Backend.Web/Iso.Backend.Web.csproj
+++ b/Iso.Backend.Web/Iso.Backend.Web.csproj
@@ -27,10 +27,10 @@
 
     <ItemGroup>
       <Folder Include="Configuration\" />
-      <Folder Include="Controllers\Products\" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Iso.Backend.Application\Iso.Backend.Application.csproj" />
       <ProjectReference Include="..\Iso.Backend.Infrastructure\Iso.Backend.Infrastructure.csproj" />
     </ItemGroup>
 
